// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DefaultRenderer boolean 1`] = `
<span
  className="ws-pre-wrap"
>
  true
</span>
`;

exports[`DefaultRenderer displayValue 1`] = `
<span
  className="ws-pre-wrap"
>
  Value 1
</span>
`;

exports[`DefaultRenderer formattedValue 1`] = `
<span
  className="ws-pre-wrap"
>
  Value 1.00
</span>
`;

exports[`DefaultRenderer large numeric displayValue 1`] = `
<span
  className="ws-pre-wrap"
>
  34,251
</span>
`;

exports[`DefaultRenderer large numeric value 1`] = `
<span
  className="ws-pre-wrap"
>
  12,345
</span>
`;

exports[`DefaultRenderer new line 1`] = `
<span
  className="ws-pre-wrap"
>
  test1
test2
</span>
`;

exports[`DefaultRenderer string 1`] = `
<span
  className="ws-pre-wrap"
>
  test string
</span>
`;

exports[`DefaultRenderer undefined 1`] = `
<span
  className="ws-pre-wrap"
/>
`;

exports[`DefaultRenderer url 1`] = `
<a
  className="ws-pre-wrap"
  href="labkey.com"
>
  Value 1
</a>
`;

exports[`DefaultRenderer value 1`] = `
<span
  className="ws-pre-wrap"
>
  1
</span>
`;
